fix: firefox scrollbar overflow

--- a/src/components/modal/z-modal/styles.css
+++ b/src/components/modal/z-modal/styles.css
@@ -100,6 +100,7 @@
   flex: 1 auto;
   background: var(--color-surface01);
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .modal-container main::-webkit-scrollbar {
